# Hummingbird

./: .gitattributes  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: PARITY_CHECKLIST.md  RELEASE_CHECKLIST.md
docs/superpowers/plans/: 2026-07-19-tauri-rewrite.md  2026-07-20-ai-csv-resilience.md  2026-07-20-log-analysis.md  2026-07-22-log-file-suffix-filter.md  (+1 more)
scripts/: check-no-secrets.sh  check-workflows.sh  prepare-release-assets.sh  release.sh
scripts/tests/: test-release-script.sh
src/: App.test.tsx  App.tsx  app.css  main.tsx  theme.test.ts  theme.ts  vite.config.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: naming-convention.md  t_electric_param.csv
src-tauri/src/: ai.rs  analyse_commands.rs  analyse_task.rs  chunking.rs  commands.rs  crypto.rs  error.rs  lib.rs  log_parse.rs  log_stats.rs  main.rs  naming.rs  output.rs  prompt.rs  register_csv.rs  settings.rs  sftp_download.rs  task.rs  updater.rs
src-tauri/src/extraction/: docx.rs  mod.rs  pdf.rs  spreadsheet.rs
src-tauri/src/passthrough/: checksum.rs  cjt188.rs  commands.rs  dlt645.rs  envelope.rs  explanation.rs  input.rs  mod.rs  modbus.rs  pair_tests.rs  register_map.rs
src/api/: tauri.test.ts  tauri.ts  types.ts
src/components/: AppSidebar.tsx  LogPanel.test.tsx  LogPanel.tsx  SettingsModal.test.tsx  SettingsModal.tsx  UpdateModal.test.tsx  UpdateModal.tsx
src/test/: setup.ts
(+54 files in other folders)
