[package]
name = "hummingbird"
version = "1.0.0"
description = "Hummingbird desktop application"
authors = ["tyrival"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
calamine = { version = "0.36.0", features = ["dates"] }
cap-std = "3"
chardetng = "0.1"
chrono = "0.4"
csv = "1"
encoding_rs = "0.8"
libc = "0.2"
pdf-extract = "0.12.0"
quick-xml = "0.41.0"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["serde", "v4"] }
zip = "8.6.0"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
ssh2 = "0.9"
flate2 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "test-util", "time"] }
wiremock = "0.6"
